--- a/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.22/markup-training-js/style.scss
+++ b/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.22/markup-training-js/style.scss
@@ -52,7 +52,7 @@ body {
       }
     }
 
-    /* <p> R */
+    /* <div > p> R */
     & > div:nth-child(2) {
       
       z-index: 5;
@@ -60,7 +60,7 @@ body {
         
       }
     }
-    /* <p> E */ 
+    /* <div > p> E */ 
     & > div:nth-child(3) {
       
       z-index: 4;
@@ -68,7 +68,7 @@ body {
 
       }
     }
-    /* <p> T  */
+    /* <div > p> T  */
     & > div:nth-child(4) {
       
       z-index: 3;
@@ -76,7 +76,7 @@ body {
 
       }
     }
-    /* <p> U  */
+    /* <div > p> U  */
     & > div:nth-child(5) {
       
       z-index: 2;
@@ -84,7 +84,7 @@ body {
         
       }
     }
-    /* <p> R  */
+    /* <div > p> R  */
     & > div:nth-child(6) {
       
       z-index: 1;
@@ -92,7 +92,7 @@ body {
         
       }
     }
-    /* <p> N  */
+    /* <div > p> N  */
     & > div:nth-child(7) {
       
 
