--- a/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.22/markup-training-js/style.css
+++ b/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.22/markup-training-js/style.css
@@ -28,12 +28,12 @@ body {
   justify-content: space-between;
   align-items: center;
   /* <div> */
-  /* <p> R */
-  /* <p> E */
-  /* <p> T  */
-  /* <p> U  */
-  /* <p> R  */
-  /* <p> N  */
+  /* <div > p> R */
+  /* <div > p> E */
+  /* <div > p> T  */
+  /* <div > p> U  */
+  /* <div > p> R  */
+  /* <div > p> N  */
 }
 #root > #left-page > div {
   width: 8.3333333333vw;
